# Bark

./: .gitmodules  CMakeLists.txt  Main.cpp  README.md  vcpkg.json
Blogpost/: index.md.html
Graphics/include/: SDLApp.h
Graphics/src/: SDLApp.cpp
common/: Circle.cpp  SDLApplication.cpp
common/engine/src/: Circle.cpp  SDLApplication.cpp
common/include/: Allocators.h  SharedPtr.h  Timer.h  UniquePtr.h
common/src/: Timer.cpp
common/tests/: AllocatorsTests.cpp  SharedPtrTests.cpp  TimerTests.cpp  UniquePtrTests.cpp
documentation/: Build.md
engine/include/: Body.h  Circle.h  Collider.h  Contact.h  Euler.h  Metrics.h  QuadTree.h  Refs.h  SharedPtr.h  Timer.h  UniquePtr.h  World.h
engine/libs/Math/tests/: TestUtility.cpp
engine/src/: Body.cpp  Collider.cpp  Contact.cpp  QuadTree.cpp  Timer.cpp  World.cpp
engine/tests/: BodyTests.cpp  ColliderTests.cpp  QuadTreeTests.cpp  WorldTests.cpp
engineTests/: BodyTests.cpp  CircleTest.cpp  EulerTests.cpp  SharedPtrTests.cpp  UniquePtrTests.cpp  WorldTests.cpp  eulerTests.cpp
graphics/SDL/include/: SDLApp.h
graphics/SFML/src/: SFMLApp.cpp
graphics/include/: Metrics.h  SDLApp.h  Sample.h  StarSystem.h
graphics/src/: SDLApp.cpp
include/: Circle.h  SDLApplication.h  euler.h
libs/Math/: CMakeLists.txt
libs/Math/include/: MathUtility.h  NVec2.h  Shape.h  TrigoLUT.h  Utility.h  Vec2.h
libs/Math/include/lookupTables/: LookUpTableTan.h  SinLUT.h
samples/: Forms.h  FormsSample.h  Metrics.h  Sample.h  StarSystem.h  StarSystemSample.h  TriggerSample.h
samples/include/: BouncingBallSample.h  BouncingCollisionSample.h  CollisionSample.h  FormsTriggerSample.h  GroundCollisionSample.h  Metrics.h  QuadTreeTriggerSample.h  Sample.h  SampleManager.h  StarSystemSample.h  TriggerSample.h
samples/src/: BouncingBallSample.cpp  BouncingCollisionSample.cpp  CollisionSample.cpp  FormsTriggerSample.cpp  GroundCollisionSample.cpp  QuadTreeTriggerSample.cpp  Sample.cpp  SampleManager.cpp  StarSystemSample.cpp  TriggerSample.cpp
src/: main.cpp
tests/: eulerTests.cpp
